<resources>
    <string name="app_name">Aplicacion Ayuda</string>
    <string name="salir">Salir</string>
    <string name="ayuda_r_pida">Ayuda Rápida</string>
    <string name="iniciar">Iniciar</string>
    <string name="aplicaci_n_para_ayudarte">Aplicación para ayudarte</string>
    <string name="voz_internacional">Voz Internacional</string>
    <string name="seleccione_un_idioma">Seleccione un idioma</string>
    <string name="espa_ol">Español</string>
    <string name="cargar_idioma">Cargar Idioma</string>
    <string name="ingl_s">Inglés</string>
    <string name="reproducir">Reproducir</string>
</resources>
