<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="60dp"
            android:text="@string/aplicaci_n_para_ayudarte"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Prueba"
            android:text="@string/iniciar" />

        <Button
            android:id="@+id/btnAyudaRapida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LanzarAyudaRapida"
            android:text="@string/ayuda_r_pida" />

        <Button
            android:id="@+id/btnModuladorGlobal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LanzarModuladorGlobal"
            android:text="@string/voz_internacional" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:onClick="CerrarAplicacion"
            android:text="@string/salir" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>